--- a/package.json
+++ b/package.json
@@ -4,21 +4,16 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.1",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
-    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-share": "^4.4.0",
     "simple-peer": "^9.11.0",
-    "socket.io-client": "^4.0.1",
-    "web-vitals": "^1.1.1"
+    "socket.io-client": "^2.3.0",
+    "firebase": "^9.1.3",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
