--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,14 @@
 {
-  "short_name": "Video Chat",
-  "name": "Video Chat App",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
-      "src": "./video64.png",
-      "sizes": "64x64",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-
-    {
-      "src": "./video512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     }
   ],
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
