--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "antd": "^4.15.1",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "simple-peer": "^9.11.0",
-    "socket.io-client": "^2.3.0",
-    "firebase": "^9.1.3",
-    "styled-components": "^5.3.3"
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
