--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.15.1",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^2.3.0"
